--- a/src/index.css
+++ b/src/index.css
@@ -134,35 +134,20 @@ img[name="gif"]{
 /* /Game-Page */
 
 /* Game-Func-Page */
-
-.answers_page{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+.respondent{
+  margin-top: 5rem;
+  text-align: center;
 }
-
-
 
 label{
   background-color: red;
   color: #fff;
-  padding: 17px 10px;
-  text-align: start;
+  padding: 17px;
+  width: 90%;
+  display: flex;
   cursor: pointer;
   margin: 0px 10px 5px 0px;
   border-radius: 5px 0px 0px 5px;
-}
-
-
-
-
-
-.input_answer_section{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 3rem;
 }
 
 h5.time_limit{
