--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,6 @@ button a.none_save{
 /* /Library-Style */ 
 
 /* Game-Page */
-
 .game_page{
   display: flex;
 }
@@ -131,6 +130,24 @@ img[name="gif"]{
   padding: 10px;
 
 }
+
+.show_game{
+  text-align: center;
+}
+
+button.create_new_questions{
+  margin-top: 5rem;
+  border: none;
+  background-color: rgb(70, 23, 143);
+  border-radius: 5px;
+  padding: 15px;
+  width: 50%;
+}
+
+button.create_new_questions a{
+  color: #fff;
+  text-decoration: none;
+}
 /* /Game-Page */
 
 /* Game-Func-Page */
@@ -151,7 +168,7 @@ label{
 }
 
 h5.time_limit{
-  position: absolute  ;
+  position: absolute;
   left: 1rem;
   top: 12rem;
   color: #fff;
@@ -159,8 +176,9 @@ h5.time_limit{
   border-radius: 5px;
   padding: 10px;
 }
-
 /* /Game-Func-Page */
+
+/* congurulation */
 .congurulation_page{
   height: 50vw;
   display: flex;
@@ -169,7 +187,7 @@ h5.time_limit{
   background-color: rgb(87, 113, 136) ;
 }
 
-
 .none{
   display: none;
 }
+/* /congurulation */
